fixed record data bleeding through menu issue

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -363,9 +363,13 @@ patientUI homepage styling
 
 .entry-completed {
     text-decoration-line: line-through;
-    opacity: 50%;
+    color: rgba(255, 255, 255, 0.5);
+    
 }
 
+.entry-completed svg{
+    stroke: rgba(255, 255, 255, 0.5);
+}
 
 /* top engager card */
 #top-engager h3{
